# ssp4c

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci-build.yaml
cmake/: config.cmake.in
include/: ssp4c.h  ssp4c_common.h  ssp4c_private.h  ssp4c_public.h  ssp4c_ssc_map_entry.h  ssp4c_ssc_mapping_transform.h  ssp4c_ssd.h  ssp4c_ssd_component.h  ssp4c_ssd_connection.h  ssp4c_ssd_connector.h  ssp4c_ssd_element_geometry.h  ssp4c_ssd_parameter_binding.h  ssp4c_ssd_parameter_mapping.h  ssp4c_ssd_parameter_set.h  ssp4c_ssd_parameter_values.h  ssp4c_ssm_mapping_entry.h  ssp4c_ssm_parameter_mapping.h  ssp4c_ssv_parameter.h  ssp4c_ssv_parameter_set.h  ssp4c_utils.h  ssp4c_xml_constants.h  ssp4c_xml_parsers.h
src/: ssp4c.c  ssp4c_ssc_map_entry.c  ssp4c_ssc_mapping_transform.c  ssp4c_ssd.c  ssp4c_ssd_component.c  ssp4c_ssd_connection.c  ssp4c_ssd_connector.c  ssp4c_ssd_element_geometry.c  ssp4c_ssd_parameter_binding.c  ssp4c_ssd_parameter_mapping.c  ssp4c_ssd_parameter_set.c  ssp4c_ssd_parameter_values.c  ssp4c_ssm_mapping_entry.c  ssp4c_ssm_parameter_mapping.c  ssp4c_ssv_parameter.c  ssp4c_ssv_parameter_set.c  ssp4c_utils.c  ssp4c_xml_constants.c  ssp4c_xml_parsers.c
test/: CMakeLists.txt  ssp4c_test.c  test.ssp
test/ssp/test/: SystemStructure.ssd
